# pubnet

./: .gitignore  .gitlab-ci.yml  .pyproject.toml.template  CHANGELOG.md  CONTRIBUTING.org  Dockerfile  README.org  asv.conf.json  flake.nix  pyproject.toml
.github/workflows/: build.yaml  release.yaml
benchmarks/: _utils.py  benchmarks.py
example/: create_graph.py  create_test_graphs.sh  structure.yml
pubnet/: __init__.py  network.py  sanitize.py  storage.py  text_transformations.py
pubnet/_similarity/: __init__.py  numpy_metrics.py
pubnet/data/: __init__.py  _utils.py
pubnet/download/: _pubmed_paths.py  pubmed.py
pubnet/network/: __init__.py  _node.py  _utils.py  pubnet.py
pubnet/network/_edge/: __init__.py  _base.py  compressed_edge.py  igraph_edge  igraph_edge.py  numpy_edge.py
tests/: _test_fixtures.py  test_io.py  test_pubnet.py
tests/data/other_pubnet/: Chemical_nodes.tsv  Publication_Chemical_edges.tsv
tests/data/simple_pubnet/: Author_Overlap_edges.tsv  Author_nodes.tsv  Publication_Author_edges.tsv  Publication_Chemical_edges.tsv  Publication_Flippedheader_edges.tsv  Publication_Flippedheaders_edges.tsv  Publication_nodes.tsv
tests/snapshots/: similarity_shortest_path_output.txt
