[tool.black]
line-length = 79
preview = true

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "pubnet"
version = "0.3.0"
description = "A python package for storing and working with publication data in graph form."
license = "MIT"
authors = [
    "David Connell <davidconnell12@gmail.com>",
]
packages = [
    { include = "pubnet" },
]

[tool.poetry.dependencies]
numpy = "^1.21"
pandas = "^1.4"
scipy = "^1.8"
matplotlib = "^3.5"
igraph = "^0.9"
python = "~3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-snapshot = "^0.9"
mypy = "^0.941"
black = "^22.3"
lxml = "^4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
