[tool.black]
line-length = 79
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "pubnet"
version = "0.6.2"
description = "A python package for storing and working with publication data in graph form."
license = "MIT"
keywords = ["publication", "network", "MEDLINE", "PubMed", "references"]
repository = "https://gitlab.com/net-synergy/pubnet"
documentation = "https://net-synergy.gitlab.io/pubnet"
readme = "README.md"
authors = ["David Connell <davidconnell12@gmail.com>"]
maintainers = ["David Connell <davidconnell12@gmail.com>"]
packages = [{ include = "pubnet" }]

[tool.poetry.dependencies]
numpy = "^1.23"
pandas = "^1.4"
scipy = "^1.9"
matplotlib = "^3.5"
igraph = "^0.10"
pyarrow = { version = "^9.0", optional = true }
appdirs = "^1.4.4"
python = "^3.10"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1"
pytest-snapshot = "^0.9"
lxml = "^4.9"

[tool.poetry.group.benchmark]
optional = true

[tool.poetry.group.benchmark.dependencies]
asv = "^0.5.1"
virtualenv = "^20.22.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
black = "^22.10"
isort = "^5.12.0"
flake8 = "6.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc3 = "^0.10"

[tool.poetry.extras]
pyarrow = ["pyarrow"]
all = ["pyarrow"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
